[package]
name = "edi"
version = "0.1.0"
authors = ["Edward McFarlane <emcfarlane000@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
bindgen = "0.51.1"
bytes = "0.5.4"
futures = "0.3"
getopts = "0.2.21"
hyper = "0.13.9"
lazy_static = "1.4.0"
libc = "0.2"
percent-encoding = "2.1.0"
pin-project = "0.4"
prometheus = { version = "0.8", features = ["process"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
